--- a/index.html
+++ b/index.html
@@ -23,98 +23,107 @@
 </head>
 
 <body>
-  <nav>
-    <div class="nav nav-tabs" id="nav-tab" role="tablist">
-      <button class="nav-link active" id="nav-roundtrip-tab" data-bs-toggle="tab" data-bs-target="#nav-roundtrip"
-        type="button" role="tab" aria-controls="nav-roundtrip" aria-selected="true"><i
-          class="fa-sharp fa-solid fa-plane-departure"></i> Ida y Vuelta</button>
-      <button class="nav-link" id="nav-going-tab" data-bs-toggle="tab" data-bs-target="#nav-going" type="button"
-        role="tab" aria-controls="nav-going" aria-selected="false"><i class="fa-sharp fa-solid fa-plane-departure"></i>
-        Solo Ida</button>
+  <div id="document-content">
+    <nav>
+      <div class="nav nav-tabs" id="nav-tab" role="tablist">
+        <button class="nav-link active" id="nav-roundtrip-tab" data-bs-toggle="tab" data-bs-target="#nav-roundtrip"
+          type="button" role="tab" aria-controls="nav-roundtrip" aria-selected="true"><i
+            class="fa-sharp fa-solid fa-plane-departure"></i> Ida y Vuelta</button>
+        <button class="nav-link" id="nav-going-tab" data-bs-toggle="tab" data-bs-target="#nav-going" type="button"
+          role="tab" aria-controls="nav-going" aria-selected="false"><i
+            class="fa-sharp fa-solid fa-plane-departure"></i>
+          Solo Ida</button>
+      </div>
+    </nav>
+    <div class="tab-content" id="nav-tabContent">
+      <div id="nav-roundtrip"></div>
+      <div id="nav-going"></div>
+      <form class="p-3" id="form" action="" method="post">
+        <input type="hidden" id="flightType" value="1" name="flightType" required>
+        <input type="hidden" name="startPt" id="startPt-hidden">
+        <input type="hidden" name="endPt" id="endPt-hidden">
+        <input type="hidden" name="startPtCode" id="startPtCode-hidden">
+        <input type="hidden" name="endPtCode" id="endPtCode-hidden">
+        <input type="hidden" name="startDt" id="startDt-hidden">
+        <input type="hidden" name="endDt" id="endDt-hidden">
+        <div class=" row mb-3 g-3">
+          <div class="col-md-3">
+            <div class="form-floating">
+              <input type="text" autocomplete="off" size="50" class="form-control rounded-4" list="IataCodeList"
+                id="startPt" placeholder="e" required>
+              <label for="startPt">Origen</label>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="form-floating">
+              <input type=" text" autocomplete="off" size="50" class="form-control rounded-4" list="IataCodeList"
+                id="endPt" placeholder="e" required>
+              <label for="endPt">Destino</label>
+            </div>
+          </div>
+          <datalist id="IataCodeList">
+          </datalist>
+          <div class="col-md-3">
+            <div class="form-floating">
+              <input type="date" class="form-control rounded-4" id="startDt" placeholder="e" required>
+              <label for="startDt">Día de salida</label>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="form-floating">
+              <input type="date" class="form-control rounded-4" id="endDt" placeholder="e" required>
+              <label for="endDt">Día de regreso</label>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="form-floating">
+              <select class="form-select rounded-4" id="adults" name="adults" aria-label="e">
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="9">9</option>
+              </select>
+              <label for="adults">Adultos</label>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="form-floating">
+              <select class="form-select rounded-4" id="children" name="children" aria-label="e">
+                <option value="0">0</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+              </select>
+              <label for="children">Niños (2-11 años)</label>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="form-floating">
+              <select class="form-select rounded-4" id="infants" name="infants" aria-label="e">
+                <option value="0">0</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+              </select>
+              <label for="infants">Bebés (0-1 año)</label>
+            </div>
+          </div>
+          <div class="d-grid gap-2 col-md-3">
+            <button class="btn btn-danger rounded-4" type="submit">Buscar Vuelos</button>
+          </div>
+        </div>
+      </form>
     </div>
-  </nav>
-  <div class="tab-content" id="nav-tabContent">
-    <div id="nav-roundtrip"></div>
-    <div id="nav-going"></div>
-    <form class="p-3" action="" method="post">
-      <input type="hidden" id="flightType" value="1" name="flightType" required>
-      <input type="hidden" name="startPt" id="startPt-hidden">
-      <input type="hidden" name="endPt" id="endPt-hidden"">
-      <div class=" row mb-3 g-3">
-      <div class="col-md-3">
-        <div class="form-floating">
-          <input type="text" autocomplete="off" size="50" class="form-control rounded-4" list="origin" id="startPt"
-            placeholder="e" required>
-          <datalist id="origin">
-          </datalist>
-          <label for="startPt">Origen</label>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="form-floating">
-          <input type=" text" autocomplete="off" size="50" class="form-control rounded-4" list="destiny" id="endPt"
-            placeholder="e" required>
-          <datalist id="destiny">
-          </datalist>
-          <label for="endPt">Destino</label>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="form-floating">
-          <input type="date" class="form-control rounded-4" id="startDt" name="startDt" placeholder="e" required>
-          <label for="startDt">Día de salida</label>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="form-floating">
-          <input type="date" class="form-control rounded-4" id="endDt" name="endDt" placeholder="e" required>
-          <label for="endDt">Día de regreso</label>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="form-floating">
-          <select class="form-select rounded-4" id="adults" name="adults" aria-label="e">
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5</option>
-            <option value="6">6</option>
-            <option value="7">7</option>
-            <option value="8">8</option>
-            <option value="9">9</option>
-          </select>
-          <label for="adults">Adultos</label>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="form-floating">
-          <select class="form-select rounded-4" id="children" name="children" aria-label="e">
-            <option value="0">0</option>
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-          </select>
-          <label for="children">Niños (2-11 años)</label>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="form-floating">
-          <select class="form-select rounded-4" id="infants" name="infants" aria-label="e">
-            <option value="0">0</option>
-            <option value="1">1</option>
-            <option value="2">2</option>
-          </select>
-          <label for="infants">Bebés (0-1 año)</label>
-        </div>
-      </div>
-      <div class="d-grid gap-2 col-md-3">
-        <button class="btn btn-danger rounded-4" type="submit">Buscar Vuelos</button>
-      </div>
   </div>
-  </form>
-  </div>
+  <!-- <div id="iframemodal">
+    <iframe id="my_iframe" frameborder="0" data-src="https://vuelos.latinaventours.com/wtc/le/vuelos/QueryBridge.aspx"
+      width="100%" height="300"></iframe>
+  </div> -->
   <script src="flight.js" type="module"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
